--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ img {
     height: 5.5%;
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
+    right: 880px;
 
 }
 
@@ -53,4 +55,55 @@ main {
 
 }
 
+main {
 
+    background-image: url(1600761.jpg);
+    background-size: 100% 100%;
+
+}
+.floating-button {
+    position: fixed;
+  bottom: 30px; 
+  right: 30px; 
+  width: 80px; 
+  height: 80px; 
+  background-color: #007bff;
+  color: #fff; 
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 18px;
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+h1 {
+    font-size: 40px;
+    color: red;
+    padding: 0vh;
+    margin: 0vh;
+}
+
+p {
+    font-size: 48px;
+    color: red;
+}
+
+button {
+    font-size: 22px;
+    padding: 10px 20px;
+    margin: 10px;
+    color: rgb(0, 255, 166);
+    border: 5px;
+    border-radius: 5px;
+    background-color: #007bff;
+    
+}
